--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "knex": "^3.1.0",
     "pg": "^8.14.1"
   },
   "devDependencies": {
